Chateau de Versailles

--- a/jour2.html
+++ b/jour2.html
@@ -589,6 +589,33 @@ Exemple : **impliquer une école de graphisme à réaliser des visualisations**
 
 ---
 
+### Chateau de Versailles et Wikipedia : .red[un partenariat de valorisation de données]
+
+* 1er partenariat entre wikipedia France et un musée Français
+* Wikipedia est la 2e source d’information des internautes sur Versailles après le site internet du château
+* Versailles s’engage dans la voie d'enrichissement de communs numérique, à travers les technologies libres et participatives
+
+En février 2011, dans le cadre du partenariat, un wikipédien est venu en résidence 6 mois à Versailles. Son but était :
+
+* D'améliorer les contenus de Wikipedia autour de Versailles,
+* D'animer la communauté autour du sujet Versailles.
+* D’expliquer, de rencontrer les équipes de Versailles, de trouver des opportunités de collaboration entre conservateurs et wikipediens.
+
+---
+
+### Un bilan positif du partenariat
+
+* Un enrichissement spectaculaire des contenus : les articles concernant le château de Versailles sont passés de 70 à 380 
+* Idem pour les photos : plus de 2000 photos versées sur WikiCommons
+* La qualité des articles et des photos a été améliorée
+* Retombées médiatiques importantes
+
+Exemple : le [plafond de la galerie des batailles](http://commons.wikimedia.org/wiki/File:Schlachtengalerie_Decke.jpg?uselang=fr) a remporté  le concours Wiki Loves Monuments en 2011 (concours photo mondial visant à valoriser les monuments historiques).
+
+&gt; Au-delà, cela a permis de changer les mentalités en interne : Wikipedia est maintenant regardé avec bienveillance par les équipes scientifiques du château.
+
+---
+
 ### Open GLAM : une communauté engagée et .red[un réseau mondial] 
 
 .red[**OpenGLAM**] est un réseau mondial de personnes et d'organisations engagées à ouvrir du contenu et des données détenues par des galeries d'art, des bibliothèques, des archives et des musées.
