--- a/classevirtuelle072020.html
+++ b/classevirtuelle072020.html
@@ -573,13 +573,13 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] français
 
-<div id="htmlwidget-243bf7924dc79194e158" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-b96f2b66c6b144212712" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-243bf7924dc79194e158">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-b96f2b66c6b144212712">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -1253,31 +1253,25 @@ class: inverse, center, middle
 ### Le festival [.red[Cultures Remix]](https://medium.com/canope-idf/r%C3%A8glement-du-festival-culturesremix-e8b61e7fc028) par Réseau Canopé
 
 .pull-left[
-![](https://miro.medium.com/max/1600/1*HSR2VoMkIUMFv3WP-bTFTA.jpeg)
+![](https://miro.medium.com/max/1600/1*HSR2VoMkIUMFv3WP-bTFTA.jpeg)]
 
-]
 .pull-right[
 
-![](https://pbs.twimg.com/media/DzqzQHnX4AEOF1a?format=jpg&amp;name=medium)
-
+![](https://pbs.twimg.com/media/DzqzQHnX4AEOF1a?format=jpg&amp;name=medium)]
 
 ---
+
 ### Incrustation
 
 
-.pull-left[
+.center[&lt;img src="./img/incrustezvous1.png"/&gt;] 
 
-![](img/incrustezvous1.png)
+---
 
-]
+### Incrustation
 
-]
-.pull-right[
 
-![](img/incrustezvous2.png)
-
-]
-
+.center[&lt;img src="./img/incrustezvous2.png"/&gt;] 
 
 ---
 
