classe virtuelle  maj 09072020

--- a/classevirtuelle072020.html
+++ b/classevirtuelle072020.html
@@ -384,7 +384,7 @@ class: center, middle
 
 La France a très vite cherché à s’inscrire dans la dynamique de l'open data, non sans succès en termes de reconnaissance internationale : 
 
-* **La France se classe ainsi quatrième** selon le dernier classement (2016) de l’Open Data Index établi par l’Open Knowledge Foundation, derrière Taïwan, l’Australie et la Grande-Bretagne.
+* **La France se classe ainsi quatrième** selon le dernier classement (2019) de l’Open Data Index établi par l’Open Knowledge Foundation, derrière Taïwan, l’Australie et la Grande-Bretagne.
 
 * L’année 2016-2017, **la France prend la présidence du Partenariat pour le Gouvernement Ouvert**, une organisation internationale ayant pour objet de promouvoir une gouvernance co-construite entre citoyens et administrations et qui promeut l'ouverture des données comme outil d'information et de participation aux décisions publiques. (*Nous y reviendrons également*)
 
@@ -411,7 +411,7 @@ La France a très vite cherché à s’inscrire dans la dynamique de l'open data
 ---
 ### 2015 : la [charte internationale de l'open data](https://opendatacharter.net/)
 
-.center[.reduite[![](./img/open-data-charter_FR.png)]]
+.center[.reduite[![](https://datactivist.coop/aaf/img/odcharter.png)]]
 
 ---
 
@@ -604,13 +604,13 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] français
 
-<div id="htmlwidget-448f7bf3c99ee90f2a97" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-dc960a3bf1a198e93916" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-448f7bf3c99ee90f2a97">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-dc960a3bf1a198e93916">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -634,7 +634,7 @@ L'open data est comme la Tour de Pise : un très bel édifice posé sur des fond
 ]
 
 .pull-right[
-[![](./img/rti.png)](https://www.rti-rating.org/country-data/)
+[![](https://datactivist.coop/aaf/img/rti.png)](https://www.rti-rating.org/country-data/)
 ]
 ---
 
