Prise en compte des remarques post formation

--- a/classevirtuelle072020.html
+++ b/classevirtuelle072020.html
@@ -614,13 +614,13 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] français
 
-<div id="htmlwidget-852640b23b2e148ef1af" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-fa45bdadea74afb187a5" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-852640b23b2e148ef1af">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-fa45bdadea74afb187a5">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -1370,7 +1370,7 @@ class: middle
 
 .pull-left[
 
-* **De nombreux profils et équipes doivent s'emparer de l'open data**
+**De nombreux profils et équipes doivent s'emparer de l'open data**
 
 [![](https://datactivist.coop/aaf/img/users.png)](https://thereboot.github.io/moti-personas/)
 
@@ -1379,20 +1379,16 @@ Une bonne stratégie consiste à réduire les frictions :
 ]
 .pull-right[
 
-* ####  Rendre les données moins difficiles à trouver (*enjeu de trouvabilité*)
-
-* ####  Publier les données avec une bonne granularité temporelle et spatiale
-
-* ####  Documenter les jeux de données pour en comprendre la structure
-
-* #### Veiller à leur mise à jour la plus fréquente possible
-
-* #### Rendre les portails attractifs à tous (et pas qu'aux développeurs web) 
+* Rendre les données moins difficiles à trouver (*enjeu de trouvabilité*)
+* Publier les données avec une bonne granularité temporelle et spatiale
+* Documenter les jeux de données pour en comprendre la structure
+* Veiller à leur mise à jour la plus fréquente possible
+* Rendre les portails attractifs à tous (et pas qu'aux développeurs web) 
 
 ]
 
 ---
-### Les freins à l'ouverture des données
+### Les .red[freins] à l'ouverture des données
 
 * **Les coûts temporels et financiers** : extraction, anonymisation, hébergement des données, numérisation des œuvres ...  
 _Pour y palier : accompagner les opérateurs et évaluer les risques/bénéfices, fixer une feuille de route open data pour prioriser/rationnaliser._
