--- a/classevirtuelle072020.html
+++ b/classevirtuelle072020.html
@@ -614,13 +614,13 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] français
 
-<div id="htmlwidget-fa45bdadea74afb187a5" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-81b4dcc779671b3ec1c9" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-fa45bdadea74afb187a5">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-81b4dcc779671b3ec1c9">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -867,7 +867,7 @@ Le portail Data Culture basé sur la solution OpenDataSoft permet de trouver rap
 
 
 .pull-right[
-On trouvera ainsi facilement la [base Joconde](https://data.culture.gouv.fr/explore/dataset/base-joconde-extrait/information/) qui décrit les oeuvres des musées de France et contient environ 600 000 notices.
+On trouvera ainsi facilement les bases avec le plus d'enregistrements comme la [base Joconde](https://data.culture.gouv.fr/explore/dataset/base-joconde-extrait/information/) qui décrit les oeuvres des musées de France et contient environ 600 000 notices.
 
 ![](./img/joconde.png)
 
