--- a/classevirtuelle072020.html
+++ b/classevirtuelle072020.html
@@ -447,7 +447,7 @@ class: inverse, center, middle
 
 ### Au .red[ministère de la Culture]
 
-Le **DIN**, département de l'innovation numérique, au sein du Secrétariat général, est depuis 2011 le coordinateur ministériel Open data pour le ministère de la culture et ses opérateurs auprès de la mission Etalab (DINUM). 
+Le département en charge de l'administration des données et, en particulier de l'ouverture des données, est le *Département du numérique pour la transformation des politiques culturelles et de l'administration des données (Depnum)* au sein du Service du numérique. Il est le correspondant pour le ministère de la culture et ses opérateurs auprès de la mission Etalab (DINUM)." 
 
 Il est chargé :
 *	de coordonner le recensement et la qualification des informations publiques, et l’ouverture des données susceptibles d’être mises à disposition
@@ -614,13 +614,13 @@ Trois grandes étapes caractérisent en France la **construction d’un droit de
 
 ### Frise chronologique de l'évolution du .red[cadre législatif] français
 
-<div id="htmlwidget-81b4dcc779671b3ec1c9" class="timevis html-widget" style="width:715px;height:350px;">
+<div id="htmlwidget-15d1757c8fc6a2cc535c" class="timevis html-widget" style="width:715px;height:350px;">
 <div class="btn-group zoom-menu">
 <button type="button" class="btn btn-default btn-lg zoom-in" title="Zoom in">+</button>
 <button type="button" class="btn btn-default btn-lg zoom-out" title="Zoom out">-</button>
 </div>
 </div>
-<script type="application/json" data-for="htmlwidget-81b4dcc779671b3ec1c9">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-15d1757c8fc6a2cc535c">{"x":{"items":[{"id":"1","content":"Loi CADA","start":"1978-07-17"},{"id":"2","content":"Directive PSI","start":"2003-11-17"},{"id":"3","content":"Directive INSPIRE","start":"2007-03-14"},{"id":"4","content":"Révision de la directive PSI","start":"2013-06-13"},{"id":"5","content":"Loi Notre","start":"2015-08-07"},{"id":"6","content":"Loi Valter","start":"2015-12-28"},{"id":"7","content":"Loi pour une République Numérique","start":"2016-10-07"}],"groups":null,"showZoom":true,"zoomFactor":0.5,"fit":true,"options":[],"height":"350px","api":[]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -777,14 +777,9 @@ d'.red[**occulter les mentions protégées**]. L’administration n’est pas te
 ---
 ### .red[Les données à particulièrement exclure] du périmètre de l'open data
 
-(Dans le cas où vous souhaiteriez en publier, mais vous n'êtes pas sûr.e)
-
 **Les informations sur lesquelles des tiers détiennent des droits de propriété intellectuelle**
 
-* Notamment celles contenues dans des documents sur lesquels des tiers détiennent
-des droits de propriété intellectuelle ; 
-
-* Exemples : 
+* Exemple : 
 Vous voulez publier des images ? Il faut s'assurer d'abord que :
 
 &gt; * 1 / les oeuvres représentées sur ces images appartienent au domaine public
@@ -792,6 +787,8 @@ Vous voulez publier des images ? Il faut s'assurer d'abord que :
 &gt; * 3 / vérifier si un contrat de cession existe entre l'établissement et le/la photographe
 &gt; * 4 / vérifier si les métadonnées contiennent une "description longue"
 d'une notice où un droit d'auteur s'applique (le droit d'auteur de l'agent public)
+
+Vous pouvez vous aider de [cet outil](https://www.culture.gouv.fr/droitsdediffusion/) qui facilite  la compréhension des droits de propriété littéraire et artistique applicables aux contenus culturels dont la diffusion est souhaitée.
 
 ---
 ### Le cas des .red[données personnelles]
@@ -1421,23 +1418,24 @@ _Pour y palier : renseigner les métadonnées qui accompagnent le jeu de donnée
 ### Bibliographie
 
 * **Guide pratique dédié à l’ouverture des données publiques culturelles**
-Publié par le ministère de la Culture, juillet 2019, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles
+Publié par le Ministère de la Culture, Septembre 2019, URL : https://www.culture.gouv.fr/Sites-thematiques/Innovation-numerique/Donnees-publiques/Open-data-un-guide-pratique-dedie-aux-donnees-publiques-culturelles2
 
 * **Numérisation et valorisation des contenus culturels : guide ouverture et réutilisation des informations publiques numériques du secteur culturel**
 Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Numerisation-et-valorisation-des-contenus-culturels-guide-ouverture-et-reutilisation-des-informations-publiques-numeriques-du-secteur-culturel
 
 * **Guide de bonnes pratiques en matière de propriété littéraire et artistique** Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique
 
-* **Livre blanc "Droit des images, histoire de l'Art et société**
-Publié par l'Institut National de l'Histoire de l'Art, Novembre 2018, URL : https://www.inha.fr/fr/actualites/actualites-de-l-inha/en-2018/rapport-final-du-programme-images-usages.html
-
 ---
 
 ### Bibliographie
 
+* **Diffusion de contenus culturels : quels droits, quelles démarches ?**
+Publié par le ministère de la culture, Février 2020, URL : https://www.culture.gouv.fr/droitsdediffusion/
 
 * **Livre blanc "Droit des images, histoire de l'Art et société**
 Publié par l'Institut National de l'Histoire de l'Art, Novembre 2018, URL : https://www.inha.fr/fr/actualites/actualites-de-l-inha/en-2018/rapport-final-du-programme-images-usages.html
+
+
 ---
 
 
